package domain.business.FuentesDeDatos;

public class FuenteProxy implements FuenteDeDatos{
}
